<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    tools:context=".Datos_Activity">

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos"
        android:textAlignment="center"
        android:background="@color/teal_200"
        android:textColor="@color/white"
        android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor"
            android:textAlignment="center"
            android:background="@color/teal_200"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canal"
            android:textAlignment="center"
            android:background="@color/purple_200"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/ValorCanal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canal"
            android:textAlignment="center"
            android:background="@color/purple_500"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programa"
            android:textAlignment="center"
            android:background="@color/wine"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/ValorPrograma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canal"
            android:textAlignment="center"
            android:background="@color/Red"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
        <Button
            android:layout_span="2"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="Regresar"
            />

    </TableRow>
</TableLayout>